--- a/lib/wgo.scss
+++ b/lib/wgo.scss
@@ -67,8 +67,8 @@
 #wgo-datatable-container {
     padding: 5px;
     margin: 0px;
-    box-shadow: 3px 3px 5px;
-
+    box-shadow: 2px 2px 3px;
+    border-radius: 3px;
 
     #wgo-datatable {
         tfoot {
