--- a/lib/wgo.scss
+++ b/lib/wgo.scss
@@ -105,3 +105,14 @@
         }
     }
 }
+
+.wgo-d-none {
+    display: none;
+}
+
+.wgo-box {
+    padding: 5px;
+    margin: 5px 20px 10px 0px;
+    box-shadow: 2px 2px 3px;
+    border-radius: 3px;
+}
