--- a/lib/wgo.scss
+++ b/lib/wgo.scss
@@ -40,6 +40,10 @@
 
 #wrap-block-list,
 #wrap-allow-list,
+#wrap-no-track-list {
+    width: 33.33%;
+}
+
 #wrap-countries-continents-allowed,
 #wrap-countries-continents-blocked {
     width: 50%;
