--- a/lib/wgo.scss
+++ b/lib/wgo.scss
@@ -119,4 +119,39 @@
     margin: 5px 20px 10px 0px;
     box-shadow: 2px 2px 3px;
     border-radius: 3px;
+
+    .wrap {
+        margin-right: 2px;
+    }
+}
+
+.wgo-progress-bar-border {
+    //border: 1px dashed #808080;
+    width: 100%;
+    height: 15px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 3px 3px 5px;
+    margin-top: 3px;
+    margin-bottom: 17px;
+    background-color: rgba(255, 0, 0, 0.8);
+}
+
+.wgo-progress-queue-content {
+    width: 0%;
+    transition: width 1s;
+    background-color: rgb(185, 180, 255);
+    height: 15px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.wgo-progress-queue-text {
+    position: absolute;
+    width: 98%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 15px;
+    color: #000000;
 }
