Some usability and style changes

--- a/lib/wgo.scss
+++ b/lib/wgo.scss
@@ -53,6 +53,7 @@
 .waf-select-area-config {
     width: 100%;
     max-width: none !important;
+    min-height: 400px;
 }
 
 #submit-set-default-regexes-uri,
